force-app/main/default/objects/Passenger__c/fields/Assigned_Seat_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Seat_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned_Seat_Allocation</label>
    <referenceTo>Seat_Segment_Allocation__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>Lookup</type>
</CustomField>