force-app/main/default/objects/Passenger__c/fields/Berth_Preference__c.field-meta.xml
<CustomField>
    <fullName>Berth_Preference__c</fullName>
    <label>Berth_Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Upper</fullName>
            </value>
            <value>
                <fullName>Side_Lower</fullName>
            </value>
            <value>
                <fullName>Side_Upper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>