force-app/main/default/objects/Passenger__c/fields/Passenger_Number__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Number__c</fullName>
    <label>Passenger_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>