force-app/main/default/objects/Passenger__c/fields/Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status__c</fullName>
    <label>Ticket_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>RAC</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>